{
  "version": 4,
  "terraform_version": "0.13.2",
  "serial": 31,
  "lineage": "c0eac226-e9c1-1d34-7382-46c5ecef43ed",
  "resources": [
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_eip",
      "name": "dev_vpc_elastic_ip_for_nat_gw",
      "provider": "module.vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.3.0/24",
            "association_id": "eipassoc-09e9327f51b3bb4c3",
            "domain": "vpc",
            "id": "eipalloc-03a1017ba433b8b08",
            "network_interface": "eni-0ad0ec5de9baba280",
            "private_dns": "ip-10-0-1-17.us-east-2.compute.internal",
            "private_ip": "10.0.1.17",
            "public_dns": "ec2-3-20-159-78.us-east-2.compute.amazonaws.com",
            "public_ip": "3.20.159.78",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dev_vpc_elastic_ip_for_nat_gw"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev_instance_1",
      "provider": "module.vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ea76fa632cdbbeee",
            "arn": "arn:aws:ec2:us-east-2:604110196984:instance/i-03854df18bb2bbdbb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03854df18bb2bbdbb",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "kubelancer-development-account-keypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03a8f1b229944c1a5",
            "private_dns": "ip-10-0-1-42.us-east-2.compute.internal",
            "private_ip": "10.0.1.42",
            "public_dns": "ec2-18-224-58-229.us-east-2.compute.amazonaws.com",
            "public_ip": "18.224.58.229",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d9d0ae0885f0fd12",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-019bd331c67140245"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-061fa3ebbc54fd1da",
            "tags": {
              "Name": "dev_instance_1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-019bd331c67140245"
            ]
          },
          "dependencies": [
            "module.vpc_module.aws_security_group.dev_vpc_security_group",
            "module.vpc_module.aws_subnet.dev_vpc_public_subnet-1a",
            "module.vpc_module.aws_vpc.dev_vpc",
            "module.vpc_module.data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev_vpc_internet_gw",
      "provider": "module.vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:604110196984:internet-gateway/igw-075ff6900c401b4f8",
            "id": "igw-075ff6900c401b4f8",
            "owner_id": "604110196984",
            "tags": {
              "Name": "dev_vpc_internet_gw"
            },
            "vpc_id": "vpc-0d9687a46183a88f5"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dev_vpc_nat_gw",
      "provider": "module.vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03a1017ba433b8b08",
            "id": "nat-0b773653edea18f9c",
            "network_interface_id": "eni-0ad0ec5de9baba280",
            "private_ip": "10.0.1.17",
            "public_ip": "3.20.159.78",
            "subnet_id": "subnet-061fa3ebbc54fd1da",
            "tags": {
              "Name": "dev_vpc_nat_gw"
            }
          },
          "dependencies": [
            "module.vpc_module.aws_eip.dev_vpc_elastic_ip_for_nat_gw",
            "module.vpc_module.aws_subnet.dev_vpc_public_subnet-1a",
            "module.vpc_module.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_route",
      "name": "dev_vpc_internet_gw_route",
      "provider": "module.vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-075ff6900c401b4f8",
            "id": "r-rtb-06fc079aab53a73871080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06fc079aab53a7387",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc_module.aws_internet_gateway.dev_vpc_internet_gw",
            "module.vpc_module.aws_route_table.dev_vpc_public_route_table",
            "module.vpc_module.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_route",
      "name": "dev_vpc_nat_gw_route",
      "provider": "module.vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03d16504a6a3e606b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b773653edea18f9c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-03d16504a6a3e606b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc_module.aws_eip.dev_vpc_elastic_ip_for_nat_gw",
            "module.vpc_module.aws_nat_gateway.dev_vpc_nat_gw",
            "module.vpc_module.aws_route_table.dev_vpc_private_route_table",
            "module.vpc_module.aws_subnet.dev_vpc_public_subnet-1a",
            "module.vpc_module.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_vpc_private_route_table",
      "provider": "module.vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03d16504a6a3e606b",
            "owner_id": "604110196984",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b773653edea18f9c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev_vpc_private_route_table"
            },
            "vpc_id": "vpc-0d9687a46183a88f5"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_vpc_public_route_table",
      "provider": "module.vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06fc079aab53a7387",
            "owner_id": "604110196984",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-075ff6900c401b4f8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev_vpc_public_route_table"
            },
            "vpc_id": "vpc-0d9687a46183a88f5"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_vpc_private_subnet-1a_association",
      "provider": "module.vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06040bf93967c383d",
            "route_table_id": "rtb-03d16504a6a3e606b",
            "subnet_id": "subnet-0981199c94c132d87"
          },
          "dependencies": [
            "module.vpc_module.aws_route_table.dev_vpc_private_route_table",
            "module.vpc_module.aws_subnet.dev_vpc_private_subnet-1a",
            "module.vpc_module.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_vpc_private_subnet-1b_association",
      "provider": "module.vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c89cccc1ab273fad",
            "route_table_id": "rtb-03d16504a6a3e606b",
            "subnet_id": "subnet-0301cfb8b79039162"
          },
          "dependencies": [
            "module.vpc_module.aws_route_table.dev_vpc_private_route_table",
            "module.vpc_module.aws_subnet.dev_vpc_private_subnet-1b",
            "module.vpc_module.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_vpc_private_subnet-1c_association",
      "provider": "module.vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eaed034846394840",
            "route_table_id": "rtb-03d16504a6a3e606b",
            "subnet_id": "subnet-07b512c05a3acdd78"
          },
          "dependencies": [
            "module.vpc_module.aws_route_table.dev_vpc_private_route_table",
            "module.vpc_module.aws_subnet.dev_vpc_private_subnet-1c",
            "module.vpc_module.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_vpc_public_subnet-1a_association",
      "provider": "module.vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c77c87b3404c60a3",
            "route_table_id": "rtb-06fc079aab53a7387",
            "subnet_id": "subnet-061fa3ebbc54fd1da"
          },
          "dependencies": [
            "module.vpc_module.aws_route_table.dev_vpc_public_route_table",
            "module.vpc_module.aws_subnet.dev_vpc_public_subnet-1a",
            "module.vpc_module.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_vpc_public_subnet-1b_association",
      "provider": "module.vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08ed1e9491d5bd464",
            "route_table_id": "rtb-06fc079aab53a7387",
            "subnet_id": "subnet-0cef646baa0995b2d"
          },
          "dependencies": [
            "module.vpc_module.aws_route_table.dev_vpc_public_route_table",
            "module.vpc_module.aws_subnet.dev_vpc_public_subnet-1b",
            "module.vpc_module.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_vpc_public_subnet-1c_association",
      "provider": "module.vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0203803bba110ee36",
            "route_table_id": "rtb-06fc079aab53a7387",
            "subnet_id": "subnet-0ebe0e7e3bdd73504"
          },
          "dependencies": [
            "module.vpc_module.aws_route_table.dev_vpc_public_route_table",
            "module.vpc_module.aws_subnet.dev_vpc_public_subnet-1c",
            "module.vpc_module.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev_vpc_security_group",
      "provider": "module.vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:604110196984:security-group/sg-019bd331c67140245",
            "description": "dev_vpc_security_group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-019bd331c67140245",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "dev_vpc_security_group_80_port",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "dev_vpc_security_group_ssh_port",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev_vpc_security_group",
            "name_prefix": "",
            "owner_id": "604110196984",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev_vpc_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d9687a46183a88f5"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_vpc_private_subnet-1a",
      "provider": "module.vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:604110196984:subnet/subnet-0981199c94c132d87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0981199c94c132d87",
            "map_public_ip_on_launch": false,
            "owner_id": "604110196984",
            "tags": {
              "Name": "dev_vpc_private_subnet-1a"
            },
            "vpc_id": "vpc-0d9687a46183a88f5"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_vpc_private_subnet-1b",
      "provider": "module.vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:604110196984:subnet/subnet-0301cfb8b79039162",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0301cfb8b79039162",
            "map_public_ip_on_launch": false,
            "owner_id": "604110196984",
            "tags": {
              "Name": "dev_vpc_private_subnet-1b"
            },
            "vpc_id": "vpc-0d9687a46183a88f5"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_vpc_private_subnet-1c",
      "provider": "module.vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:604110196984:subnet/subnet-07b512c05a3acdd78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-07b512c05a3acdd78",
            "map_public_ip_on_launch": false,
            "owner_id": "604110196984",
            "tags": {
              "Name": "dev_vpc_private_subnet-1c"
            },
            "vpc_id": "vpc-0d9687a46183a88f5"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_vpc_public_subnet-1a",
      "provider": "module.vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:604110196984:subnet/subnet-061fa3ebbc54fd1da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-061fa3ebbc54fd1da",
            "map_public_ip_on_launch": false,
            "owner_id": "604110196984",
            "tags": {
              "Name": "dev_vpc_public_subnet-1a"
            },
            "vpc_id": "vpc-0d9687a46183a88f5"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_vpc_public_subnet-1b",
      "provider": "module.vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:604110196984:subnet/subnet-0cef646baa0995b2d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0cef646baa0995b2d",
            "map_public_ip_on_launch": false,
            "owner_id": "604110196984",
            "tags": {
              "Name": "dev_vpc_public_subnet-1b"
            },
            "vpc_id": "vpc-0d9687a46183a88f5"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_vpc_public_subnet-1c",
      "provider": "module.vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:604110196984:subnet/subnet-0ebe0e7e3bdd73504",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0ebe0e7e3bdd73504",
            "map_public_ip_on_launch": false,
            "owner_id": "604110196984",
            "tags": {
              "Name": "dev_vpc_public_subnet-1c"
            },
            "vpc_id": "vpc-0d9687a46183a88f5"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev_vpc",
      "provider": "module.vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:604110196984:vpc/vpc-0d9687a46183a88f5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09a80219732322de4",
            "default_route_table_id": "rtb-00569b485c37c6475",
            "default_security_group_id": "sg-0aea9926a3347f4c3",
            "dhcp_options_id": "dopt-f0c2419b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d9687a46183a88f5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00569b485c37c6475",
            "owner_id": "604110196984",
            "tags": {
              "Name": "Development-VPC"
            }
          }
        }
      ]
    }
  ]
}